@@ -10,14 +10,14 @@ import time
 from scipy.signal import welch
 from scipy.signal import fftconvolve
 import socket
-from numpy import *
+from numpy import *  
 from struct import *
 import zmq
 import requests
 from threading import Thread, RLock
 
-
-
+            
+    
 # VALIDATION CRC
 def validate_CRC(frameRawHex):
     toCheckBits=(unpackbits(frameRawHex[:-2,None],axis=1)[:,::-1].ravel()).astype('bool')
@@ -26,19 +26,19 @@ def validate_CRC(frameRawHex):
     GFlip=G[::-1]
     N_bits=len(toCheckBits)
     SR=ones(r,dtype=bool)
-
+    
     for b in toCheckBits:
         Outbit=SR[r-1]
         SR=roll(SR,1)
         SR[0]=False
         XORMask=(b!=Outbit)&GFlip
         SR= (SR !=XORMask)
-
+        
     crcBits=unpackbits(array(frameRawHex[-2:][::-1],dtype=uint8))
-    crcCheck=all(invert(SR)==crcBits)
-
+    crcCheck=all(invert(SR)==crcBits) 
+    
     return crcCheck,crcBits
-
+              
 
 def send_init_packet():
     time.sleep(10)
@@ -50,8 +50,8 @@ def send_init_packet():
         datazmq(frameRawHex)
     printzmq("Test: Sending 100Hz offset frequency")
     changeFreqzmq("REL",str(100))
-
-
+    
+    
 def resetFreq(socket2,decode):
     time.sleep(5)
     freq=int(435.525*1e6)
@@ -68,51 +68,51 @@ def changeFreq(lastFrequencyShift,limit,lastFreqChange,detection):
         if (abs(lastFrequencyShift) > limit)&(presentTime-lastFreqChange> 30) :
                 changeFreqzmq("REL",str(int(lastFrequencyShift)))
                 lastFreqChange = presentTime
-
+        
     return lastFreqChange
-
+    
 def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList):
             startTime=time.time()
             data=hstack(dataList)
             nData=len(data)
 #            print(nData)
-
+            
             nDataFitZero=nDataFitStart
             nDataFit=nDataFitEnd-nDataFitZero
             dataFit=data[nDataFitZero:nDataFitZero+nDataFit]
-
+            
             if goFast==False:
                 N_fine=200
                 bitRate=lastBitRate # bitrate
             else:
                 bitRate=lastBitRate # bitrate
                 N_fine=21
-
-
+                
+                
             Fe=38400 #frequence echantillonage
             Nsample=int(Fe/bitRate+0.5)
             Fan = array([-1,1,1,1,1,1,1,-1])# fanion RX25
-
-
+            
+            
             reqWelch2,fftDataWelch2=welch(dataFit,fs=Fe,return_onesided=False,nperseg=1024)
             r2=append(fft.fftshift(reqWelch2),fft.fftshift(reqWelch2))
             f2=append(fft.fftshift(fftDataWelch2),fft.fftshift(fftDataWelch2))
             freqOffset=r2[convolve(f2,ones(1024//(Nsample)),mode="same").argmax()]
-
+                
 #            print("..%i..with delay = %i ms"%(1,int((time.time()-startTime)*1000)))
-
+            
             # FREQUENCY SMOOTHING with sync
             dataCorrected=data*exp(-1j*2*pi*freqOffset*arange(nData)/Fe)
             dataCorrected=convolve(ones(Nsample),dataCorrected,mode="same")
             dataCorrectedFit=dataCorrected[nDataFitZero:nDataFitZero+nDataFit]
-
+                
             # CORRECTION FINE PHASE
-
+            
             N1=32
             N2=N1*2
             NWave=int((len(dataCorrectedFit)-N2+N1)/N1)
             dataCorrectedWave=array([dataCorrectedFit[i*N1:i*N1+N2] for i in range(NWave)])
-
+            
             x=real(dataCorrectedWave)
             y=imag(dataCorrectedWave)
             theta=linspace(0,pi,10,endpoint=False)
@@ -123,20 +123,20 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
             phase1=unwrap(phase*2)*0.5
             r=polyfit(arange(len(amp_max)),phase1,2,w=amp)
             freqOffset+=r[1]/N1/(2*pi)*Fe
-
+            
             phase2=poly1d(r)(arange(len(amp_max)))
             X2=x*cos(phase2[:,None])+y*sin(phase2[:,None])
             Y2=-x*sin(phase2[:,None])+y*cos(phase2[:,None])
-
+            
             phase3=poly1d(r)( (arange(len(dataCorrected))-0.5*N2-nDataFitZero) /N1)
             X=real(dataCorrected)*cos(phase3)+imag(dataCorrected)*sin(phase3)
             Y=-real(dataCorrected)*sin(phase3)+imag(dataCorrected)*cos(phase3)
-
+            
             dataFineCorrected=X+1j*Y
-
+            
 #            print("..%i..with delay = %i ms"%(3,int((time.time()-startTime)*1000)))
-
-
+                
+                
             # INTERPOLATION HORLOGES
             xp=arange(nData)-nDataFitZero-nDataFit/2+0.5
             Nbit=int(nDataFit*bitRate/Fe*(1-1e-4)-10)
@@ -144,10 +144,10 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
             N=int(nData*bitRate/Fe*(1-1e-4)+20)
             x=(arange(2*N)-N-0.5+Nbit/2-Nbit//2)*(Fe/bitRate)
             x=x[(x>xp.min())&(x<xp.max())]
-
+            
             shiftBiteRate1=linspace(-0.5,0.5,10)*Nsample
             freqBiteRate1=linspace(-0.5e-4*N_fine,0.5e-4*N_fine,N_fine)+1
-
+            
             tab=arange(nData)[(xp*min(freqBiteRate1)>min(xFit)+min(shiftBiteRate1))&(xp*min(freqBiteRate1)<max(xFit)+max(shiftBiteRate1))]
             xmin=min(tab)
             xmax=max(tab)
@@ -157,12 +157,12 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
             gc+=abs(real(gc))-real(gc)
             energy1=abs(gc.sum(axis=2))
             indexes=unravel_index(energy1.argmax(), energy1.shape)
-
+            
 #            print("..%i..with delay = %i ms"%(4,int((time.time()-startTime)*1000)))
-
+            
             shiftBiteRate2=linspace(-0.1,0.1,10)*Nsample+shiftBiteRate1[indexes[1]]
             freqBiteRate2=linspace(-1.5e-4,1.5e-4,37)+freqBiteRate1[indexes[0]]
-
+            
             tab=arange(nData)[(xp*min(freqBiteRate2)>min(xFit)+min(shiftBiteRate2))&(xp*min(freqBiteRate2)<max(xFit)+max(shiftBiteRate2))]
             xmin=min(tab)
             xmax=max(tab)
@@ -174,48 +174,48 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
             indexes=unravel_index(energy2.argmax(), energy2.shape)
             dataFinal=interp(x+shiftBiteRate2[indexes[1]],xp*freqBiteRate2[indexes[0]],real(dataFineCorrected))
             freqBiteRateFinal=freqBiteRate2[indexes[0]]
-
+            
 #            print("..%i..with delay = %i ms"%(5,int((time.time()-startTime)*1000)))
-
+            
             #DESCRAMBLING
             boolFinal=dataFinal>0
             dataBits=((boolFinal[17:]!=boolFinal[:-17])!=boolFinal[17-12:-12])
             dataBits=(2*dataBits[1:]-1)*(2*dataBits[:-1]-1)
-
-
+            
+            
             # RECUPERATION FANIONS
             convFan=convolve(dataBits,Fan,mode="same")
             Fanion=where(convFan==8)[0]
             startFrame=Fanion[where(diff(Fanion)>175)[0]]+3
             endFrame=Fanion[where(diff(Fanion)>175)[0]+1]-4
-
+            
 
             frameChecking=[]
             frameCategory=[]
             oneGoodFrame=False
             for (s,e) in zip(startFrame,endFrame):
-
-
-                # DESTUFFING
+            
+                
+                # DESTUFFING    
                 frameRaw=dataBits[s:e]
                 destuff=ones(len(frameRaw),dtype=bool)
                 destuff[:5]=False
                 for i in range(5): destuff[1+i:]&=(frameRaw[:-1-i]>0)
-
+                
                 # RECUPERE INFO
                 frameRaw=frameRaw[invert(destuff)]
                 frameRaw=frameRaw[1:1+8*((len(frameRaw)-1)//8)]
                 frameRawbit=(frameRaw>0).reshape(len(frameRaw)//8,8)
-
+                
                 frameRawHex=packbits(frameRawbit[:,::-1])
                 crc=packbits(frameRawbit[-2:,:])
-
+                
                 # VALIDATION
                 if len(frameRawHex) > 18:
-
+                    
                     callSignName=(frameRawHex[:14]>>1).tostring()
                     categoryNumber=frameRawHex[17]%32
-
+                    
                     if callSignName[:6]==b'PICSAT':
                         crcCheck,crcBits=validate_CRC(frameRawHex)
                         if (crcCheck == False):
@@ -224,10 +224,10 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
                         crcCheck=False
                 else:
                     crcCheck=False
-
+                
                 frameChecking.append(crcCheck)
-
-
+                
+                
                 if (crcCheck == True):
                     dataSave=True
                     frameCategory.append(categoryNumber)
@@ -240,20 +240,20 @@ def process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRa
                         printzmq("Checked Data from "+str(callSignName)+" -> cat %i"%categoryNumber)
                         crcList.append(crcBits)
                         datazmq(frameRawHex)
-
+                            
                     lastGoodFitTime=time.time()
                     lastFrequencyShift=freqOffset
                     lastBitRate=bitRate*freqBiteRateFinal
                     oneGoodFrame=True
-
-
+                    
+            
             print("Processed data in%5i ms with bitrate %i."%(int((time.time()-startTime)*1000),int(lastBitRate)))
-
-
+            
+            
             return (dataFinal,crcList,(phase1,phase2),(startTime,lastFrequencyShift,lastBitRate,oneGoodFrame,lastGoodFitTime),(startFrame,endFrame,frameChecking,frameCategory))
-
-
-
+        
+        
+                    
 class Decode(Thread):
     def __init__(self):
         self.dataReady=False
@@ -270,7 +270,7 @@ class Decode(Thread):
         self.nDataFitStart=0
         self.nDataFitEnd=0
         Thread.__init__(self)
-
+        
     def run(self):
 
         crcList=self.crcList
@@ -283,61 +283,51 @@ class Decode(Thread):
         goFast=self.goFast
         crcList=self.crcList
         lastFreqChange=self.lastFreqChange
-
+        
         currentTime=time.time()
         if (currentTime-lastGoodFitTime) < 35:
             goFast=True
         else:
             goFast=False
-
+            
         if (currentTime-lastFreqChange) < 5:
             goFast=False
-
+            
         if goFast ==True:
             print("-- Processing Data from point%7i to%7i, with fast speed:"%(nDataFitStart,nDataFitEnd))
         else:
             print("-- Processing Data from point%7i to%7i, with slow speed:"%(nDataFitStart,nDataFitEnd))
-
+        
         if self.bitRateKnown == True:
             d=process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList)
         else:
             goFast=False
-            lastBitRate=1200
+            lastBitRate=9600
             d=process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList)
             if d[3][3]==True:
                 self.bitRateKnown = True
             else:
-                lastBitRate=9600
+                lastBitRate=1200
                 d=process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList)
                 if d[3][3]==True:
                     self.bitRateKnown = True
-                else:
-                    lastBitRate=2400
-                    d=process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList)
-                    if d[3][3]==True:
-                        self.bitRateKnown = True
-                    else:
-                        lastBitRate=4800
-                        d=process_data(dataList,nDataFitStart,nDataFitEnd,lastFrequencyShift,lastBitRate,lastGoodFitTime,goFast,crcList)
-                        if d[3][3]==True:
-                            self.bitRateKnown = True
-
+        
         self.paramList=append(self.paramList,array(d[3])[None,:],axis=0)
         self.paramList=self.paramList[self.paramList[-1,0]-self.paramList[:,0]<600]
         self.startTime,self.lastFrequencyShift,self.lastBitRate,self.oneGoodFrame,self.lastGoodFitTime=d[3]
         self.lastFreqChange=changeFreq(self.lastFrequencyShift,0.7e4,self.lastFreqChange,self.oneGoodFrame)
         self.d=d
-        self.dataReady=True
-
-
+        self.dataReady=True 
+        
+        
 def mainFunction(socket,decode):
     print("Starting Main Thread")
-
+    
     sizeTmpBuffer=60000
     nDataFitEnd=0
     nDataFitStart=0
     dataList=[]
-
+    
     while True:
         str1=socket.recv()
         if str1 == b'IQ':
@@ -345,13 +335,13 @@ def mainFunction(socket,decode):
             dataPoints=unpack("i",str2)[0]
             proccess_data=False
             if (dataPoints==0)&(nDataFitEnd>2048):
-
+                
                 if nDataFitEnd-nDataFitStart < sizeTmpBuffer:
                     nDataFitStart=max([0,nDataFitEnd-sizeTmpBuffer])
-
+                    
                 proccess_data=True
                 endOfTransmission=True
-
+                
             if (dataPoints!=0):
                 floatPoints=dataPoints*2
                 strData=socket.recv()
@@ -361,10 +351,10 @@ def mainFunction(socket,decode):
                 if nDataFitEnd-nDataFitStart > sizeTmpBuffer:
                     proccess_data=True
                     endOfTransmission=False
-
-
+                    
+                    
             if proccess_data==True:
-
+                
                 while nDataFitStart > 300000:
                     npop=len(dataList.pop(0))
                     nDataFitStart-=npop
@@ -374,7 +364,7 @@ def mainFunction(socket,decode):
                 decode.nDataFitEnd=nDataFitEnd
                 decode.nDataFitStart=nDataFitStart
                 decode.run()
-
+                    
                 if endOfTransmission==True:
 
                     decode.crcList=[]
@@ -392,30 +382,30 @@ def printzmq(stringOutput):
     str1="MSG"
     socket2.send_string(str1,flags=zmq.SNDMORE)
     socket2.send_string(stringOutput)
-
+    
 def datazmq(data):
-
+    
     str1="PACKET"
     socket2.send_string(str1,flags=zmq.SNDMORE)
     socket2.send(data)
-
-
+           
+    
 def changeFreqzmq(relAbs,Hertz):
-
+    
     str1="FREQ"
     socket2.send_string(str1,flags=zmq.SNDMORE)
     socket2.send_string(relAbs,flags=zmq.SNDMORE)
     socket2.send_string(Hertz)
-
-
-
+           
+    
+    
 msg="Decode"
 print("\x1B]0;%s\x07" % msg)
-
+    
 context = zmq.Context()
 
 # starting publisher for data packets
-print("Starting ZMQ publisher")
+print("Starting ZMQ publisher…")
 socket2 = context.socket(zmq.PUB)
 socket2.bind("tcp://*:5564")
 printzmq("Started ZMQ publisher.")
@@ -429,20 +419,20 @@ socket.connect("tcp://localhost:5563")
 socket.setsockopt_string(zmq.SUBSCRIBE,"IQ")
 
 printzmq("Connected to PicTalk.")
-
+    
 # configuring decode function
-decode=Decode()
+decode=Decode()    
 
 # configuring main thread
 mainThread = Thread(target = mainFunction, args=(socket,decode))
 
 # starting main thread
 mainThread.start()
-
-
+    
+    
 #resetThread = Thread(target = resetFreq, args=(socket2,decode))
 #resetThread.start()
 resetFreq(socket2,decode)
 
-# check with dummy packet
+# check with dummy packet    
 #send_init_packet()
